--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
 form *:focus {
     @apply outline-none;
 }
-form input {
+form input:not(.no-style) {
     @apply p-1 border border-white/[.3] rounded-lg bg-transparent text-white;
 }
 
